<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/str_nav_home" />

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_nav_events"
        android:title="@string/str_nav_events" />

    <!-- Placeholder rỗng cho khoảng trống FAB ở giữa — icon trong suốt -->
    <item
        android:id="@+id/nav_create_placeholder"
        android:icon="@drawable/ic_transparent"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_my_tickets"
        android:icon="@drawable/ic_nav_ticket"
        android:title="@string/str_nav_my_tickets" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/str_nav_profile" />

</menu>
